--- a/index.html
+++ b/index.html
@@ -3,28 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dog school</title>
+    <title>Dog school Pfotenakademie</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <nav>
         <ul class="nav-links">
             <li><a href="#home">Home</a></li>
-            <li><a href="#services">Courses</a></li>
-            <li><a href="#about">About us</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="#services">Kurse</a></li>
+            <li><a href="#about">Über uns</a></li>
+            <li><a href="#contact">Kontakt</a></li>
+            <li><a href="#impressum">Impressum</a></li>
         </ul>
     </nav>
     <main class="main-dog-content" role="main">
-<h1>Your dogs best friend</h1>
+<h1 class="dog-headline">Your dogs best friend</h1>
 <div class="purple-dog">
 <figure>
 <img src="img/black-dog-purple.png" alt="Cute black dog" class="black-dog-picture" width="350" height="500">
 </figure>
 </div>
 <div class="wrapper">
-<p>
-Herzlich willkommen bei [Name Ihrer Hundeschule]! Wir freuen uns, dass Sie und Ihr Hund den ersten Schritt zu einer starken Partnerschaft machen. Ob Welpentraining, Erziehungskurse oder individuelles Coaching – bei uns stehen Sie und Ihr Hund im Mittelpunkt.
+<p class="welcome">
+Herzlich willkommen bei der Pfotenakademie! Wir freuen uns, dass Sie und Ihr Hund den ersten Schritt zu einer starken Partnerschaft machen. Ob Welpentraining, Erziehungskurse oder individuelles Coaching – bei uns stehen Sie und Ihr Hund im Mittelpunkt.
 Unser Ziel ist es, ein harmonisches Zusammenleben zwischen Mensch und Hund zu fördern. Mit Geduld, Empathie und modernen Trainingsmethoden begleiten wir Sie auf dem Weg zu einem gut erzogenen und glücklichen Hund.
 Entdecken Sie unser vielfältiges Kursangebot und lassen Sie uns gemeinsam an einer vertrauensvollen Beziehung arbeiten. Wir freuen uns darauf, Sie und Ihren Vierbeiner kennenzulernen!
 </p>
