added php and mysql

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ Entdecken Sie unser vielfältiges Kursangebot und lassen Sie uns gemeinsam an ei
 </div>
 <div class="form-container">
     <h1>Kontaktformular</h1>
-    <form action="/submit" method="POST" aria-labelledby="form-title">
+    <form action="submit.php" method="POST" aria-labelledby="form-title">
         <div>
             <label for="name">Name <span aria-hidden="true">*</span></label>
             <input type="text" id="name" name="name" required aria-required="true">
